--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Libre Tools</string>
-    <string name="patch_librelink">Patch LibreLink with the last scan</string>
-    <string name="remove_librelink_database">Remove LibreLink database</string>
+    <string name="add_last_scan_to_librelink_db">Add last scan to LibreLink database</string>
+    <string name="remove_librelink_db">Remove LibreLink database</string>
 </resources>
