Полностью интегировал OOP1. Приложение при критических ошибках теперь не падает, а показывает активити с ней.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="app_logs_come_here">App logs come here.</string>
     <string name="mmol_l">mmol/L</string>
     <string name="mg_dl">mg/dl</string>
+    <string name="restart_app">Restart app</string>
+    <string name="critical_error_occurred">Critical error occurred</string>
 </resources>
