--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="next">Next</string>
     <string name="load_more">Load more</string>
     <string name="set_draw_overlay_permission">Set Draw Overlay Permission</string>
+    <string name="start_web_service">Start web service</string>
+    <string name="stop_web_service">Stop web service</string>
 </resources>
